Added necessary files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 eureka.instance.prefer-ip-address=true
+
+management.endpoints.web.exposure.include=health,info,metrics
+management.info.env.enabled=true
+management.info.build.enabled=true
+management.info.git.enabled=true
+management.info.java.enabled=true
+management.info.os.enabled=true
+
+info.app.name=TheJackFolio Instagram Application
+info.app.description=This microservice is used as a layer above the Instagram APIs to perform all kinds of operations that are necessary for this project.
+info.app.version=1.0.0
