Added necessary files

--- a/src/main/resources/keys_dummy.properties
+++ b/src/main/resources/keys_dummy.properties
@@ -8,3 +8,6 @@ SCOPE = user_profile,user_media
 RESPONSE_TYPE = code
 GRANT_TYPE_ACCESS_TOKEN = authorization_code
 GRANT_TYPE_LONG_LIVE_ACCESS_TOKEN = ig_exchange_token
+USERNAME =
+PASSWORD = 
+ROLE =
